force-app/main/default/objects/Fokus_Campaign__c/Fokus_Campaign__c.object-meta.xml
<CustomObject>
    <description>Requested by Telia IT. Used for Fokus data sync</description>
    <label>Fokus Campaign</label>
    <nameField>
        <displayFormat>Cam-{00000}</displayFormat>
        <label>Fokus Campaign</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fokus Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>