force-app/main/default/objects/Fokus_Campaign__c/fields/Campaign_Value__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Value__c</fullName>
    <label>Campaign Value</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>