force-app/main/default/objects/Fokus_Campaign__c/fields/IsTermIncluded__c.field-meta.xml
<CustomField>
    <fullName>IsTermIncluded__c</fullName>
    <formula>CONTAINS(Product_Campaign_Composite_Key__c, TEXT(Campaign_Value__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTermIncluded</label>
    <type>Checkbox</type>
</CustomField>