force-app/main/default/objects/Fokus_Campaign__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup ton the product table</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>