force-app/main/default/objects/Fokus_Campaign__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>